--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
       <div class="instag-division">
          <div class="instag-cellphone">
-            <img src="assets/celular-instagram.png" alt="img Smartfone">
-            <img src="assets/screenshot1.png" alt="img Smartfone" class="img-celular">
-            <img src="assets/screenshot2.png" alt="img Smartfone" class="img-celular">
-            <img src="assets/screenshot3.png" alt="img Smartfone" class="img-celular">
-            <img src="assets/screenshot4.png" alt="img Smartfone" class="img-celular">
+            <img src="assets/movie/celular-instagram.png" alt="img Smartfone">
+            <img src="assets/movie/screenshot1.png" alt="img Smartfone" class="img-celular">
+            <img src="assets/movie/screenshot2.png" alt="img Smartfone" class="img-celular">
+            <img src="assets/movie/screenshot3.png" alt="img Smartfone" class="img-celular">
+            <img src="assets/movie/screenshot4.png" alt="img Smartfone" class="img-celular">
         </div>
 
 
         <div class="conteiner-login">
 
             <div class="box">
-                <img src="assets/Instagram-Logo.png" class="instagram-logo" alt="instagram logo">
+                <img src="assets/r.social/img-Instagram-Logo.png" class="instagram-logo" alt="instagram logo">
 
                 <div class="user-login">
                     <form>
@@ -45,7 +45,7 @@
             </div>
 
             <a href="https://pt-br.facebook.com/" class="instag-enter-facebook">
-                    <img src="assets/facebook (1).png" alt="facebook" width="16px" height="16px"
+                    <img src="assets/r.social/img-facebook.png" alt="facebook" width="16px" height="16px"
                         style="margin-right: 7px;">
                           <b>Entrar com o Facebook</b></a>
 
